2014-09-04  Bob Halley  <halley@dnspython.org>

	* Add CAA implementation.  Thanks to Brian Wellington for the
	  patch.

2014-09-01  Bob Halley  <halley@dnspython.org>

	* (Version 1.12.0 released)

2014-08-31  Bob Halley  <halley@dnspython.org>

	* The test system can now run the tests without requiring dnspython
	  to be installed.

2014-07-24  Bob Halley  <halley@dnspython.org>

	* The 64-bit version of Python on Windows has sys.maxint set to
	  2^31-1, yet passes 2^63-1 as the "unspecified bound" value in
	  slices.  This is a bug in Python as the documentation says the
	  unspecified bound value should be sys.maxint.  We now cope with
	  this.  Thanks to Matthäus Wander for reporting the problem.

2014-06-21  Bob Halley  <halley@dnspython.org>

	* When reading from a masterfile, if the first content line
	  started with leading whitespace, we raised an ugly exception
	  instead of doing the right thing, namely using the zone origin as
	  the name. [#73]  Thanks to Tassatux for reporting the issue.

	* Added dns.zone.to_text() convenience method.  Thanks to Brandon
	  Whaley <redkrieg@gmail.com> for the patch.

	* The /etc/resolv.conf setting "options rotate" is now understood
	  by the resolver.  If present, the resolver will shuffle the
	  nameserver list each time dns.resolver.query() is called.  Thanks
	  to underrun for the patch.  Note that you don't want to add
	  "options rotate" to your /etc/resolv.conf if your system's
	  resolver library does not understand it.  In this case, just set
	  resolver.rotate = True by hand.

2014-06-19  Bob Halley  <halley@dnspython.org>

	* Escaping of Unicode has been corrected.  Previously we escaped
	  and then converted to Unicode, but the right thing to do is
	  convert to Unicode, then escape.  Also, characters > 0x7f should
	  NOT be escaped in Unicode mode.  Thanks to Martin Basti for the
	  patch.

	* dns.rdtypes.ANY.DNSKEY now has helpers functions to convert