@@ -207,8 +207,8 @@ class Rdata(object):
         rdclass.  Return < 0 if self < other in the DNSSEC ordering,
         0 if self == other, and > 0 if self > other.
         """
-
-        raise NotImplementedError
+        return cmp(self.to_digestable(dns.name.root),
+                   other.to_digestable(dns.name.root))
 
     def __eq__(self, other):
         if not isinstance(other, Rdata):
@@ -256,19 +256,6 @@ class Rdata(object):
 
     def __hash__(self):
         return hash(self.to_digestable(dns.name.root))
-
-    def _wire_cmp(self, other):
-        # A number of types compare rdata in wire form, so we provide
-        # the method here instead of duplicating it.
-        #
-        # We specifiy an arbitrary origin of '.' when doing the
-        # comparison, since the rdata may have relative names and we
-        # can't convert a relative name to wire without an origin.
-        b1 = cStringIO.StringIO()
-        self.to_wire(b1, None, dns.name.root)
-        b2 = cStringIO.StringIO()
-        other.to_wire(b2, None, dns.name.root)
-        return cmp(b1.getvalue(), b2.getvalue())
 
     def from_text(cls, rdclass, rdtype, tok, origin = None, relativize = True):
         """Build an rdata object from text format.
@@ -362,9 +349,6 @@ class GenericRdata(Rdata):
         return cls(rdclass, rdtype, wire[current : current + rdlen])
 
     from_wire = classmethod(from_wire)
-
-    def _cmp(self, other):
-        return cmp(self.data, other.data)
 
 _rdata_modules = {}
 _module_prefix = 'dns.rdtypes'
