@@ -75,9 +75,3 @@ class HINFO(dns.rdata.Rdata):
         return cls(rdclass, rdtype, cpu, os)
 
     from_wire = classmethod(from_wire)
-
-    def _cmp(self, other):
-        v = cmp(self.cpu, other.cpu)
-        if v == 0:
-            v = cmp(self.os, other.os)
-        return v
