@@ -78,9 +78,3 @@ class RP(dns.rdata.Rdata):
     def choose_relativity(self, origin = None, relativize = True):
         self.mbox = self.mbox.choose_relativity(origin, relativize)
         self.txt = self.txt.choose_relativity(origin, relativize)
-
-    def _cmp(self, other):
-        v = cmp(self.mbox, other.mbox)
-        if v == 0:
-            v = cmp(self.txt, other.txt)
-        return v
